test/files/neg/macro-bundle-trait.check
macro-bundle-trait.scala:10: error: macro bundles must be monomorphic traits extending either blackbox.Macro or whitebox.Macro and not implementing their `val c: Context` member
  def foo = macro Bundle.impl
                  ^
one error found
